<resources>
    <string name="app_name">lessons</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name:</string>
    <string name="number">Phone number:</string>
    <string name="number_2">Phone number 2:</string>
    <string name="email">E-amil:</string>
    <string name="email_2">E-mail 2:</string>
    <string name="desc">Descriotion:</string>
</resources>